# perception-object_recognition

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
src/: .ORPointCloud.cpp.kate-swp  CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp  ORPointCloud.cpp  ORPointCloud.hpp  compute_hausdorff.cpp  correspondence_grouping.cpp  hypothesis.cpp  identification.cpp  keypoints.cpp  narf_identifier.cpp  pcd_concatenator.cpp  pcd_opener.cpp  pcd_resize.cpp  ply2pcd2.cpp  rms.cpp  save_model.cpp
test/: CMakeLists.txt  test_Dummy.cpp
